--- a/ASP.MVC/Application.Data/Application.Data.csproj
+++ b/ASP.MVC/Application.Data/Application.Data.csproj
@@ -54,9 +54,11 @@
   <ItemGroup>
     <Compile Include="ApplicationDbContext.cs" />
     <Compile Include="IUoWData.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\EFRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
+    <Compile Include="UoWData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
