update mvc laptops

--- a/ASP.MVC/Application.Models/Application.Models.csproj
+++ b/ASP.MVC/Application.Models/Application.Models.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Laptop.cs" />
     <Compile Include="Manufacturer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShouldNotContainEmailAttribute.cs" />
     <Compile Include="Vote.cs" />
   </ItemGroup>
   <ItemGroup>
