--- a/ASP.MVC/Application.Web/Application.Web.csproj
+++ b/ASP.MVC/Application.Web/Application.Web.csproj
@@ -175,14 +175,17 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LaptopsController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\ManufacturersAdministrationController.cs" />
     <Compile Include="GlimpseSecurityPolicy.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\HomePageLaptopViewModel.cs" />
+    <Compile Include="Models\CommentViewModel.cs" />
+    <Compile Include="Models\LaptopViewModel.cs" />
     <Compile Include="Models\LaptopDetailsViewModel.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\SubmitCommentModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -258,6 +261,8 @@
     <Content Include="Scripts\jquery-2.1.1.min.map" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <None Include="Scripts\jquery-2.1.1-vsdoc.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -304,6 +309,14 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Laptops\Details.cshtml" />
+    <Content Include="Views\Shared\_CommentPartial.cshtml" />
+    <Content Include="Views\Laptops\List.cshtml" />
+    <Content Include="Views\ManufacturersAdministration\Create.cshtml" />
+    <Content Include="Views\ManufacturersAdministration\Delete.cshtml" />
+    <Content Include="Views\ManufacturersAdministration\Details.cshtml" />
+    <Content Include="Views\ManufacturersAdministration\Edit.cshtml" />
+    <Content Include="Views\ManufacturersAdministration\Index.cshtml" />
+    <Content Include="Views\Laptops\KendoList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
