--- a/ASP.MVC/Application.Web/Web.config
+++ b/ASP.MVC/Application.Web/Web.config
@@ -19,6 +19,7 @@
   </appSettings>
   <system.web>
     <authentication mode="None" />
+    <customErrors mode="On"/>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
