--- a/ASP.MVC/Application.Web/Application.Web.csproj
+++ b/ASP.MVC/Application.Web/Application.Web.csproj
@@ -172,7 +172,9 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\CommentsAdministrationController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LaptopsAdministrationController.cs" />
     <Compile Include="Controllers\LaptopsController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\ManufacturersAdministrationController.cs" />
@@ -186,6 +188,7 @@
     <Compile Include="Models\LaptopDetailsViewModel.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\SubmitCommentModel.cs" />
+    <Compile Include="Models\SubmitSearchModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -317,6 +320,13 @@
     <Content Include="Views\ManufacturersAdministration\Edit.cshtml" />
     <Content Include="Views\ManufacturersAdministration\Index.cshtml" />
     <Content Include="Views\Laptops\KendoList.cshtml" />
+    <Content Include="Views\Laptops\Search.cshtml" />
+    <Content Include="Views\CommentsAdministration\Index.cshtml" />
+    <Content Include="Views\LaptopsAdministration\Create.cshtml" />
+    <Content Include="Views\LaptopsAdministration\Delete.cshtml" />
+    <Content Include="Views\LaptopsAdministration\Details.cshtml" />
+    <Content Include="Views\LaptopsAdministration\Edit.cshtml" />
+    <Content Include="Views\LaptopsAdministration\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -353,7 +363,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>37856</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:37856/</IISUrl>
+          <IISUrl>http://localhost:1234/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
